--- a/Editor/jp.keijiro.ffmpeg-out.Editor.asmdef
+++ b/Editor/jp.keijiro.ffmpeg-out.Editor.asmdef
@@ -1,7 +1,7 @@
 {
-    "name": "FFmpegOut.Editor",
+    "name": "jp.keijiro.ffmpeg-out.Editor",
     "references": [
-        "FFmpegOut"
+        "jp.keijiro.ffmpeg-out.Runtime"
     ],
     "optionalUnityReferences": [],
     "includePlatforms": [
