--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "jp.keijiro.ffmpegout",
+    "name": "jp.keijiro.ffmpeg-out",
     "displayName": "FFmpegOut",
     "version": "0.0.1",
     "unity": "2018.1",
